--- a/html/index.html
+++ b/html/index.html
@@ -20,7 +20,7 @@
     <button id="start-btn">Start!</button>
     
 
-    <div id="alonso"><img src="../imagenes/alonso.jpg" alt=""></div>
+    <!-- <div id="alonso"><img src="../imagenes/alonso.jpg" alt=""></div> -->
 
     <!-- Pantalla -->
     <div id="game-box"></div>
