--- a/html/index.html
+++ b/html/index.html
@@ -11,25 +11,25 @@
     <!-- la linea de arriba previene que los elementos se puedan arrastrar -->
 
     <!-- SPLASH SCREEN -->
-     <div id="splash-screen" class="container">
+    <!-- <div id="splash-screen" class="container">
       <img src="" width="500" alt="logo" />
     </div>
-     
+     -->
 
     <!-- <div id="score">Position: 20</div> -->
     <button id="start-btn">Start!</button>
     
 
-    <!-- <div id="alonso"><img src="../imagenes/alonso.jpg" alt=""></div> -->
+    <div id="alonso"><img src="../imagenes/alonso.jpg" alt=""></div>
 
     <!-- Pantalla -->
     <div id="game-box"></div>
 
     <!-- Pantalla final si pierdo -->
-    <div id="gameover-screen" class="container">
+    <!-- <div id="gameover-screen" class="container">
       <img src="../imagenes/game over.jpg" width="500" alt="logo" />
       <button id="restart-btn">Play Again!</button>
-    </div>
+    </div> -->
     <!-- Pantalla final si gano-->
     <!-- <div id="wingame-screen" class="container">
       <button id="replay-btn">Replay</button>
