--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     <!-- <div id="wingame-screen" class="container">
       <button id="replay-btn">Replay</button>
     </div> -->
-    
+    <div></div>
     <script src="./JS/RoadDivisor.js"></script>
     <script src="./JS/EnemyCar.js"></script>
     <script src="./JS/Game.js"></script>
