--- a/index.html
+++ b/index.html
@@ -7,23 +7,15 @@
     <title>Smash-F1</title>
     <link rel="stylesheet" href="../style/stilos.css" />
   </head>
-  <body">
-    <!-- la linea de arriba previene que los elementos se puedan arrastrar -->
-
-    <!-- SPLASH SCREEN -->
-    <!-- <div id="splash-screen" class="container">
-      <img src="" width="500" alt="logo" />
+  <body>
+    <div id="start-container">
+      <button id="start-btn">Start!</button>
     </div>
-     -->
-
-    <!-- <div id="score">Position: 20</div> -->
-    <button id="start-btn">Start!</button>
     
 
-    <div id="alonso"><img src="../imagenes/alonso.jpg" alt=""></div>
-
+    <div id="road"></div>
     <!-- Pantalla -->
-    <div id="game-box"></div>
+    <!-- <div id="game-box"></div> -->
 
     <!-- Pantalla final si pierdo -->
     <!-- <div id="gameover-screen" class="container">
@@ -35,8 +27,10 @@
       <button id="replay-btn">Replay</button>
     </div> -->
     
-    <script src="../JS/main.js"></script>
-    <script src="../JS/game.js"></script>
-    <script src="../JS/alonso.js"></script>
+    <script src="./JS/RoadDivisor.js"></script>
+    <script src="./JS/EnemyCar.js"></script>
+    <script src="./JS/Game.js"></script>
+    <script src="./JS/Alonso.js"></script>
+    <script src="./JS/main.js"></script>
   </body>
 </html>
