--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
       <h1 style="color: #ffffff">Smash F1</h1>
       <button id="start-btn">Start!</button>
     </div>
+    <audio id="game-music" loop src="./audio/formula-uno-.mp3">
+      
+    </audio>
     
     <!-- Pantalla final si pierdo -->
     <div id="gameover-screen" class="container">
