--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Smash-F1</title>
-    <link rel="stylesheet" href="../style/stilos.css" />
+    <link rel="stylesheet" href="./style/stilos.css" />
 
     <!-- GOOGLE FONTS -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -25,7 +25,7 @@
       <button id="start-btn">Start!</button>
     </div>
     <audio id="game-music" loop src="./audio/formula-uno-.mp3">
-      
+
     </audio>
     
     <!-- Pantalla final si pierdo -->
