--- a/index.html
+++ b/index.html
@@ -42,11 +42,11 @@
       <button class="restart-btn">Play Again!</button>
     </div>
     
-    <script src="./JS/RoadDivisor.js"></script>
-    <script src="./JS/EnemyCar.js"></script>
-    <script src="./JS/Game.js"></script>
-    <script src="./JS/Alonso.js"></script>
-    <script src="./JS/main.js"></script>
+    <script src="./js/roadDivisor.js"></script>
+    <script src="./js/enemyCar.js"></script>
+    <script src="./js/game.js"></script>
+    <script src="./js/alonso.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
 
