--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
       <button class="restart-btn">Play Again!</button>
     </div>
     
-    <script src="./js/roadDivisor.js"></script>
-    <script src="./js/enemyCar.js"></script>
+    <script src="./js/roaddivisor.js"></script>
+    <script src="./js/enemycar.js"></script>
     <script src="./js/game.js"></script>
     <script src="./js/alonso.js"></script>
     <script src="./js/main.js"></script>
