--- a/index.html
+++ b/index.html
@@ -31,14 +31,14 @@
     <!-- Pantalla final si pierdo -->
     <div id="gameover-screen" class="container">
       <h1>Alonso loses again!</h1>
-      <img src="../imagenes/game over.jpg" alt="logo" />
+      <img src="./imagenes/game-over.jpg" alt="logo" />
       <button class="restart-btn">Try Again!</button>
     </div>
 
     <!-- Pantalla final si gano-->
     <div id="wingame-screen" class="container">
       <h1>Finally, Alonso could win!</h1>
-      <img src="../imagenes/alonso-ganador.jpeg" alt="">
+      <img src="./imagenes/alonso-ganador.jpeg" alt="">
       <button class="restart-btn">Play Again!</button>
     </div>
     
