--- a/index.html
+++ b/index.html
@@ -24,9 +24,6 @@
       <h1 style="color: #ffffff">Smash F1</h1>
       <button id="start-btn">Start!</button>
     </div>
-    <audio id="game-music" loop src="./audio/formula-uno-.mp3">
-
-    </audio>
     
     <!-- Pantalla final si pierdo -->
     <div id="gameover-screen" class="container">
@@ -42,6 +39,7 @@
       <button class="restart-btn">Play Again!</button>
     </div>
     
+    <script src="./js/obstacle.js"></script>
     <script src="./js/roaddivisor.js"></script>
     <script src="./js/enemycar.js"></script>
     <script src="./js/game.js"></script>
@@ -49,4 +47,3 @@
     <script src="./js/main.js"></script>
   </body>
 </html>
-
